--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,8 +128,8 @@ h1{
 .nav-menu ul{
 	display: none;
 	margin: 0;
-	top: 0px;
-	right: 0px;
+	top: 0;
+	right: 0;
 	width: 100%;
 	min-height: 100vh;
 	position: absolute;
@@ -204,7 +204,7 @@ p{
 	font-size: 0.875rem;
 	letter-spacing: 0.05em;
 	color: #021725;
-	padding: 25px 0 25px 0;
+	padding: 25px 0;
 }
 
 .read-more:hover{
@@ -258,7 +258,7 @@ img{
 	font-weight: 300;
 	letter-spacing: 0.05em;
 	color: #021725;
-	padding: 36px 0 36px 0px;
+	padding: 36px 0;
 	margin: 0;
 }
 
